@@ -286,8 +286,9 @@ OENTRY opcodlst_1[] = {
 { "oscil",  0xfffe                                                      },
 { "oscil3", 0xfffe                                                      },
 { "oscili", 0xfffe                                                      },
-{ "peak", 0xfffd,                                                       },
-{ "rtclock", 0xfffd,                                                    },
+{ "peak", 0xfffd                                                        },
+{ "rtclock", 0xfffd                                                     },
+{ "tablew",  0xfffe                                                     },
 { "ihold",  S(LINK),    1,      "",     "",     ihold                   },
 { "turnoff",S(LINK),    2,      "",     "",     NULL,   turnoff         },
 { "=_r",    S(ASSIGN),  1,      "r",    "i",    rassign                 },
